--- a/web-service/src/main/resources/public/login.html
+++ b/web-service/src/main/resources/public/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="tr" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -22,7 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i" rel="stylesheet">
 
     <!--Favicon-->
-    <link href="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/fav.png" rel="shortcut icon"
+    <link href="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/fav.png"
+          rel="shortcut icon"
           type="image/png"/>
 </head>
 <body>
@@ -35,7 +36,8 @@
 
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1"
+                <button aria-expanded="false" class="navbar-toggle collapsed"
+                        data-target="#bs-example-navbar-collapse-1"
                         data-toggle="collapse" type="button">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -51,7 +53,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right main-menu">
                     <li class="dropdown">
-                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href="#"
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown"
+                           href="#"
                            role="button">Home <span><img
                                 alt=""
                                 src="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/down-arrow.png"/></span></a>
@@ -61,7 +64,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href="#"
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown"
+                           href="#"
                            role="button">Newsfeed <span><img
                                 alt=""
                                 src="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/down-arrow.png"/></span></a>
@@ -75,7 +79,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href="#"
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown"
+                           href="#"
                            role="button">Timeline <span><img
                                 alt=""
                                 src="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/down-arrow.png"/></span></a>
@@ -92,7 +97,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle pages" data-toggle="dropdown"
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle pages"
+                           data-toggle="dropdown"
                            href="#" role="button">All Pages <span><img
                                 alt=""
                                 src="https://bilge-web-statics.s3.us-east-2.amazonaws.com/bilgesocialmedia/images/down-arrow.png"/></span></a>
@@ -157,7 +163,10 @@
                     <!--Registration Form Contents-->
                     <div class="tab-content">
                         <div class="tab-pane active" id="register">
-                            <h3>Register Now !!!</h3>
+                            <h3><label th:text="${model.title}"/></h3>
+                            <p th:each="ls : ${model.urunler}"><label th:style="${lsStat.index==0 ? 'color:red' : ''}"
+                                                                      th:text="${ls.urunAdi}"/>
+                            </p>
                             <p class="text-muted">Be cool and join today. Meet millions</p>
 
                             <!--Register Form-->
@@ -177,7 +186,8 @@
                                 <div class="row">
                                     <div class="form-group col-xs-12">
                                         <label class="sr-only" for="email">Email</label>
-                                        <input class="form-control input-group-lg" id="email" name="Email" placeholder="Your Email"
+                                        <input class="form-control input-group-lg" id="email" name="Email"
+                                               placeholder="Your Email"
                                                title="Enter Email" type="text"/>
                                     </div>
                                 </div>
