--- a/BilgeAdamSocialMediaHtml/index-register.html
+++ b/BilgeAdamSocialMediaHtml/index-register.html
@@ -48,7 +48,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="images/down-arrow.png" alt="" /></span></a>
                   <ul class="dropdown-menu newsfeed-home">
-                    <li><a href="index.html">Landing Page 1</a></li>
+                    <li><a href="indexv2.html">Landing Page 1</a></li>
                     <li><a href="index-register.html">Landing Page 2</a></li>
                   </ul>
               </li>
@@ -80,7 +80,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="images/down-arrow.png" alt="" /></span></a>
                 <ul class="dropdown-menu page-list">
-                  <li><a href="index.html">Landing Page 1</a></li>
+                  <li><a href="indexv2.html">Landing Page 1</a></li>
                   <li><a href="index-register.html">Landing Page 2</a></li>
                   <li><a href="newsfeed.html">Newsfeed</a></li>
                   <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
@@ -259,7 +259,7 @@
                         <select class="form-control" id="country">
                           <option value="country" disabled selected>Country</option>
                           <option value="AFG">Afghanistan</option>
-                          <option value="ALA">Åland Islands</option>
+                          <option value="ALA">ï¿½land Islands</option>
                           <option value="ALB">Albania</option>
                           <option value="DZA">Algeria</option>
                           <option value="ASM">American Samoa</option>
@@ -312,10 +312,10 @@
                           <option value="COD">Congo, the Democratic Republic of the</option>
                           <option value="COK">Cook Islands</option>
                           <option value="CRI">Costa Rica</option>
-                          <option value="CIV">Côte d'Ivoire</option>
+                          <option value="CIV">Cï¿½te d'Ivoire</option>
                           <option value="HRV">Croatia</option>
                           <option value="CUB">Cuba</option>
-                          <option value="CUW">Curaçao</option>
+                          <option value="CUW">Curaï¿½ao</option>
                           <option value="CYP">Cyprus</option>
                           <option value="CZE">Czech Republic</option>
                           <option value="DNK">Denmark</option>
@@ -438,11 +438,11 @@
                           <option value="PRT">Portugal</option>
                           <option value="PRI">Puerto Rico</option>
                           <option value="QAT">Qatar</option>
-                          <option value="REU">Réunion</option>
+                          <option value="REU">Rï¿½union</option>
                           <option value="ROU">Romania</option>
                           <option value="RUS">Russian Federation</option>
                           <option value="RWA">Rwanda</option>
-                          <option value="BLM">Saint Barthélemy</option>
+                          <option value="BLM">Saint Barthï¿½lemy</option>
                           <option value="SHN">Saint Helena, Ascension and Tristan da Cunha</option>
                           <option value="KNA">Saint Kitts and Nevis</option>
                           <option value="LCA">Saint Lucia</option>
