--- a/BilgeAdamSocialMediaHtml/newsfeed-messages.html
+++ b/BilgeAdamSocialMediaHtml/newsfeed-messages.html
@@ -50,7 +50,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="images/down-arrow.png" alt="" /></span></a>
                   <ul class="dropdown-menu newsfeed-home">
-                    <li><a href="index.html">Landing Page 1</a></li>
+                    <li><a href="indexv2.html">Landing Page 1</a></li>
                     <li><a href="index-register.html">Landing Page 2</a></li>
                   </ul>
               </li>
@@ -82,7 +82,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="images/down-arrow.png" alt="" /></span></a>
                 <ul class="dropdown-menu page-list">
-                  <li><a href="index.html">Landing Page 1</a></li>
+                  <li><a href="indexv2.html">Landing Page 1</a></li>
                   <li><a href="index-register.html">Landing Page 2</a></li>
                   <li><a href="newsfeed.html">Newsfeed</a></li>
                   <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
